--- a/data/import/local/full_DE.yml
+++ b/data/import/local/full_DE.yml
@@ -126,8 +126,9 @@ actions:
     - data_entity: product-alternative
       source: data/import/common/common/product_alternative.csv
     - data_entity: product-quantity
-      source: data/import/common/common/product_quantity.csv
-        # Store relation
+      source:
+          data/import/common/common/product_quantity.csv
+          # Store relation
     - data_entity: discount-store
       source: data/import/common/DE/discount_store.csv
     - data_entity: product-relation-store
