--- a/frontend/merchant-portal/tsconfig.spec.json
+++ b/frontend/merchant-portal/tsconfig.spec.json
@@ -1,17 +1,19 @@
 {
-  "extends": "../../tsconfig.mp.json",
-  "compilerOptions": {
-    "outDir": "./out-tsc/spec",
-    "module": "commonjs",
-    "types": ["jest", "node"]
-  },
-  "files": [
-    "test-setup.ts"
-  ],
-  "include": [
-    "../../vendor/spryker/spryker/Bundles/*/src/Spryker/Zed/*/Presentation/Components/**/*.spec.ts",
-    "../../vendor/spryker/spryker/Bundles/*/src/Spryker/Zed/*/Presentation/Components/**/*.d.ts",
-    "../../src/Pyz/Zed/Presentation/Components/**/*.spec.ts",
-    "../../src/Pyz/Zed/Presentation/Components/**/*.d.ts"
-  ]
+    "extends": "../../tsconfig.mp.json",
+    "compilerOptions": {
+        "outDir": "./out-tsc/spec",
+        "module": "commonjs",
+        "types": ["jest", "node"],
+        "emitDecoratorMetadata": false
+    },
+    "files": ["test-setup.ts"],
+    "include": [
+        "../../vendor/spryker/spryker/Bundles/*/src/Spryker/Zed/*/Presentation/Components/**/*.spec.ts",
+        "../../vendor/spryker/spryker/Bundles/*/src/Spryker/Zed/*/Presentation/Components/**/*.test.ts",
+        "../../vendor/spryker/spryker/Bundles/*/src/Spryker/Zed/*/Presentation/Components/**/*.d.ts",
+        "../../src/Pyz/Zed/Presentation/Components/**/*.spec.ts",
+        "../../src/Pyz/Zed/Presentation/Components/**/*.test.ts",
+        "../../src/Pyz/Zed/Presentation/Components/**/*.d.ts",
+        "jest.config.ts"
+    ]
 }
