--- a/tsconfig.mp.json
+++ b/tsconfig.mp.json
@@ -30,6 +30,7 @@
     "include": [
         "src/Pyz/Zed/ZedUi/Presentation/Components/main.ts",
         "src/Pyz/Zed/ZedUi/Presentation/Components/polyfills.ts",
+        "src/Pyz/Zed/ZedUi/Presentation/Components/environments/environment.prod.ts",
         "vendor/spryker/spryker/Bundles/*/src/Spryker/Zed/*/Presentation/Components/entry.ts",
         "src/Pyz/Zed/*/Presentation/Components/entry.ts"
     ]
