--- a/deploy.spryker-scos.yml
+++ b/deploy.spryker-scos.yml
@@ -57,9 +57,9 @@ image:
             - blackfire
             - newrelic
         ini:
-            "opcache.revalidate_freq": 0
-            "opcache.enable_cli": 0
-            "opcache.enable": 0
+            'opcache.revalidate_freq': 0
+            'opcache.enable_cli': 0
+            'opcache.enable': 0
     node:
         version: 16
         npm: 8
