--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "mp:build:watch": "ng build --watch",
         "mp:build:production": "ng build --configuration production",
         "mp:test": "ng test",
-        "mp:lint": "ng lint",
+        "mp:eslint": "ng lint",
         "mp:clean": "run-s mp:clean:*",
         "mp:clean:dist": "rimraf public/MerchantPortal/assets/js",
         "mp:update:paths": "node ./frontend/merchant-portal/update-config-paths",
@@ -41,35 +41,44 @@
         "npm": ">=8.0.0"
     },
     "dependencies": {
+        "@angular/animations": "~15.0.3",
+        "@angular/cdk": "~15.0.3",
+        "@angular/common": "~15.0.3",
+        "@angular/compiler": "~15.0.3",
+        "@angular/core": "~15.0.3",
+        "@angular/elements": "~15.0.3",
+        "@angular/forms": "~15.0.3",
+        "@angular/platform-browser": "~15.0.3",
+        "@angular/platform-browser-dynamic": "~15.0.3",
+        "@angular/router": "~15.0.3",
         "@webcomponents/custom-elements": "~1.3.1",
         "@webcomponents/webcomponents-platform": "~1.0.1",
         "@webcomponents/webcomponentsjs": "~2.4.0",
         "autonumeric": "~4.6.0",
-        "core-js": "~3.4.1",
+        "core-js": "~3.26.1",
         "lodash-es": "~4.17.15",
         "password-validator": "~5.1.0",
-        "rxjs": "~7.4.0",
-        "zone.js": "~0.11.4"
+        "rxjs": "~7.5.7",
+        "zone.js": "~0.12.0"
     },
     "devDependencies": {
-        "@angular-builders/custom-webpack": "~12.1.3",
-        "@angular-devkit/build-angular": "~12.2.16",
-        "@angular/cli": "~12.2.16",
-        "@angular/common": "~12.2.16",
-        "@angular/compiler": "~12.2.16",
-        "@angular/compiler-cli": "~12.2.16",
-        "@angular/core": "~12.2.16",
-        "@angular/language-service": "~12.2.16",
-        "@angular/platform-browser": "~12.2.16",
-        "@angular/platform-browser-dynamic": "~12.2.16",
+        "@angular-builders/custom-webpack": "~15.0.0",
+        "@angular-devkit/build-angular": "~15.0.3",
+        "@angular-eslint/builder": "~15.0.0",
+        "@angular-eslint/eslint-plugin": "~15.0.0",
+        "@angular-eslint/eslint-plugin-template": "~15.0.0",
+        "@angular-eslint/schematics": "~15.0.0",
+        "@angular-eslint/template-parser": "~15.0.0",
+        "@angular/cli": "~15.0.3",
+        "@angular/compiler-cli": "~15.0.3",
+        "@angular/language-service": "~15.0.3",
         "@babel/plugin-proposal-class-properties": "~7.17.12",
         "@babel/plugin-transform-runtime": "~7.17.12",
         "@babel/preset-typescript": "~7.17.12",
         "@jsdevtools/file-path-filter": "~3.0.2",
-        "@nrwl/cli": "~12.10.1",
-        "@nrwl/jest": "~12.10.1",
-        "@nrwl/tao": "~12.10.1",
-        "@nrwl/workspace": "~12.10.1",
+        "@nrwl/cli": "~15.0.7",
+        "@nrwl/jest": "~15.0.7",
+        "@nrwl/workspace": "~15.0.7",
         "@prettier/plugin-xml": "~0.13.1",
         "@spryker/frontend-config.eslint": "~0.0.2",
         "@spryker/frontend-config.prettier": "~0.0.5",
@@ -77,41 +86,42 @@
         "@spryker/frontend-config.tslint": "~0.0.5",
         "@spryker/oryx-for-zed": "~2.12.0",
         "@spryker/sass-resources-loader": "~2.0.1-spryker.0.1.0",
-        "@types/jest": "~27.0.2",
+        "@types/jest": "~28.1.1",
         "@types/node": "~14.14.33",
-        "@types/webpack": "~4.41.17",
+        "@types/webpack": "~5.28.0",
+        "@typescript-eslint/eslint-plugin": "~5.44.0",
+        "@typescript-eslint/parser": "~5.44.0",
         "autoprefixer": "~9.8.8",
         "babel-loader": "~8.2.5",
-        "clean-webpack-plugin": "~1.0.1",
-        "codelyzer": "~6.0.0",
+        "clean-webpack-plugin": "~4.0.0",
         "commander": "~4.0.1",
-        "compression-webpack-plugin": "~5.0.2",
-        "copy-webpack-plugin": "~5.1.2",
+        "compression-webpack-plugin": "~10.0.0",
+        "copy-webpack-plugin": "~11.0.0",
         "css-loader": "~3.2.0",
-        "fast-glob": "~3.1.0",
-        "jest": "~27.2.3",
-        "jest-preset-angular": "~9.0.3",
-        "mini-css-extract-plugin": "~0.8.0",
+        "eslint": "~8.28.0",
+        "eslint-plugin-deprecation": "~1.3.3",
+        "fast-glob": "~3.2.12",
+        "jest": "~28.1.3",
+        "jest-environment-jsdom": "~28.1.1",
+        "jest-preset-angular": "~12.2.3",
+        "mini-css-extract-plugin": "~2.7.2",
         "npm-run-all": "~4.1.5",
-        "optimize-css-assets-webpack-plugin": "~5.0.8",
+        "nx": "~15.0.7",
+        "optimize-css-assets-webpack-plugin": "~6.0.1",
+        "postcss": "~8.4.20",
         "postcss-loader": "~3.0.0",
-        "prettier": "~2.5.1",
+        "prettier": "~2.7.1",
         "rimraf": "~3.0.2",
         "sass": "~1.51.0",
         "sass-loader": "~10.2.0",
         "stylelint": "~13.13.1",
-        "terser-webpack-plugin": "~4.2.3",
-        "ts-jest": "~27.0.5",
-        "ts-node": "~9.1.1",
+        "terser-webpack-plugin": "~5.3.6",
+        "ts-jest": "~28.0.8",
+        "ts-node": "~10.9.1",
         "tslib": "~2.0.0",
         "tslint": "~6.1.3",
-        "typescript": "~4.2.4",
-        "typescript-eslint-parser": "~22.0.0",
-        "webpack": "~4.46.0",
-        "webpack-merge": "~4.2.2"
-    },
-    "resolutions": {
-        "typescript": "4.2.4",
-        "fsevents": "2.1.3"
+        "typescript": "~4.8.4",
+        "webpack": "~5.74.0",
+        "webpack-merge": "~5.8.0"
     }
 }
