--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,13 +10,14 @@
         "importHelpers": true,
         "skipLibCheck": true,
         "skipDefaultLibCheck": true,
-        "target": "es2015",
+        "target": "es2020",
         "module": "esnext",
         "typeRoots": ["node_modules/@types"],
         "lib": ["dom", "esnext"],
         "baseUrl": ".",
         "removeComments": true,
         "rootDir": ".",
+        "useDefineForClassFields": false,
         "paths": {
             "@mp/dashboard-merchant-portal-gui": [
                 "vendor/spryker/spryker/Bundles/DashboardMerchantPortalGui/mp.public-api.ts"
@@ -52,5 +53,5 @@
         "./src/Pyz/Yves/**/*",
         "./src/Pyz/Zed/**/*"
     ],
-    "exclude": ["**/node_modules/**", "**/*.spec.ts", "public", "dist", "**/dist/**"]
+    "exclude": ["**/node_modules/**", "**/*.spec.ts", "**/*.test.ts", "public", "dist", "**/dist/**"]
 }
