--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "mp:clean": "run-s mp:clean:*",
         "mp:clean:dist": "rimraf public/MerchantPortal/assets/js",
         "mp:update:paths": "node ./frontend/merchant-portal/update-config-paths",
-        "postinstall": "npm run mp:update:paths && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points --async"
+        "postinstall": "npm run mp:update:paths"
     },
     "engines": {
         "node": ">=16.0.0",
