PBC-334: HTTP adapter for Search and integration with CatalogRestApi module (#7581)
PBC-334: HTTP adapter for Search and integration with CatalogRestApi module

--- a/composer.json
+++ b/composer.json
@@ -192,7 +192,8 @@
             "dealerdirect/phpcodesniffer-composer-installer": true,
             "composer/package-versions-deprecated": true,
             "codeception/c3": true,
-            "spryker/composer-merge-plugin": true
+            "spryker/composer-merge-plugin": true,
+            "sllh/composer-versions-check": true
         }
     },
     "repositories": [
