--- a/.travis.yml
+++ b/.travis.yml
@@ -1209,7 +1209,7 @@ jobs:
                     --recursive \
                     --expires "$(date -d '+7 days' --utc +'%Y-%m-%dT%H:%M:%SZ')"
 
-        - name: Docker / Alpine / PHP 8.1 / MariaDB / Robot
+        - name: Docker / Alpine / PHP 8.1 / PostgreSQL / Robot
           <<: *DOCKER_BUILD_TEMPLATE
           stage: Test
           language: python
@@ -1219,23 +1219,23 @@ jobs:
               - SPRYKER_PLATFORM_IMAGE=spryker/php:8.1
               - TRAVIS=1
           script:
-              - docker/sdk boot -v deploy.ci.acceptance.mariadb.yml
-              - travis_wait docker/sdk up -t -v
-              - travis_wait docker/sdk testing console queue:worker:start --stop-when-empty
+              - docker/sdk boot -v deploy.ci.acceptance.yml
+              - travis_wait 35 docker/sdk up -t -v
+              - travis_wait 35 docker/sdk testing console queue:worker:start --stop-when-empty
               - python3 -m pip install --upgrade pip
               - python3 -m pip install -U robotframework
               - python3 -m pip install -U robotframework-requests
               - python3 -m pip install -U robotframework-jsonlibrary
               - python3 -m pip install -U robotframework-databaselibrary
-              - python3 -m pip install PyMySQL
+              - python3 -m pip install psycopg2-binary
               - sudo apt install awscli -q
               - git clone https://github.com/spryker/robotframework-suite-tests.git --single-branch --branch master robotframework-tests
               - cd robotframework-tests
-              - robot -v env:api_suite --exclude skip-due-to-issueORskip-due-to-refactoring -d results -s tests.api.suite.glue .
+              - robot -v env:api_suite -v db_engine:psycopg2 --exclude skip-due-to-issueORskip-due-to-refactoring -d results -s tests.api.suite.glue .
           after_script:
               - *AWS_SYNC_CONFIG
               - |
-                  AWS_ACCESS_KEY_ID=$ROBOT_TESTS_ARTIFACTS_KEY AWS_SECRET_ACCESS_KEY=$ROBOT_TESTS_ARTIFACTS_SECRET aws s3 cp $TRAVIS_BUILD_DIR/robotframework-tests/results s3://$ROBOT_TESTS_ARTIFACTS_BUCKET/robot-test-artifacts/$TRAVIS_BUILD_NUMBER/PHP8.1MariaDBRobot/ \
+                  AWS_ACCESS_KEY_ID=$ROBOT_TESTS_ARTIFACTS_KEY AWS_SECRET_ACCESS_KEY=$ROBOT_TESTS_ARTIFACTS_SECRET aws s3 cp $TRAVIS_BUILD_DIR/robotframework-tests/results s3://$ROBOT_TESTS_ARTIFACTS_BUCKET/robot-test-artifacts/$TRAVIS_BUILD_NUMBER/PHP8.1PostgreSQLRobot/ \
                     --recursive \
                     --expires "$(date -d '+7 days' --utc +'%Y-%m-%dT%H:%M:%SZ')"
 services:
