SUPESC-606 Fixed filtering by stores in Availability Notifications. (#7587)
SUPESC-606 Fixed filtering by stores in Availability Notifications.

--- a/deploy.aws-env-template.yml
+++ b/deploy.aws-env-template.yml
@@ -48,6 +48,9 @@ image:
         SPRYKER_PRODUCT_CONFIGURATOR_PORT: 80
         SPRYKER_PRODUCT_CONFIGURATOR_ENCRYPTION_KEY: 'change123'
         SPRYKER_PRODUCT_CONFIGURATOR_HEX_INITIALIZATION_VECTOR: '0c1ffefeebdab4a3d839d0e52590c9a2'
+        SPRYKER_YVES_HOST_DE: de.example.cloud.spryker.toys
+        SPRYKER_YVES_HOST_AT: at.example.cloud.spryker.toys
+        SPRYKER_YVES_HOST_US: us.example.cloud.spryker.toys
 composer:
     mode: --no-dev
     autoload: --classmap-authoritative
