--- a/deploy.spryker-scos.yml
+++ b/deploy.spryker-scos.yml
@@ -52,6 +52,8 @@ image:
         SPRYKER_PRODUCT_CONFIGURATOR_PORT: 443
         SPRYKER_PRODUCT_CONFIGURATOR_ENCRYPTION_KEY: 'change123'
         SPRYKER_PRODUCT_CONFIGURATOR_HEX_INITIALIZATION_VECTOR: '0c1ffefeebdab4a3d839d0e52590c9a2'
+        SPRYKER_YVES_HOST_DE: de.scos.demo-spryker.com
+        SPRYKER_YVES_HOST_AT: at.scos.demo-spryker.com
     php:
         enabled-extensions:
             - blackfire
