--- a/deploy.spryker-staging.yml
+++ b/deploy.spryker-staging.yml
@@ -53,6 +53,9 @@ image:
         SPRYKER_PRODUCT_CONFIGURATOR_PORT: 80
         SPRYKER_PRODUCT_CONFIGURATOR_ENCRYPTION_KEY: 'change123'
         SPRYKER_PRODUCT_CONFIGURATOR_HEX_INITIALIZATION_VECTOR: '0c1ffefeebdab4a3d839d0e52590c9a2'
+        SPRYKER_YVES_HOST_DE: de.staging.cloud.spryker.toys
+        SPRYKER_YVES_HOST_AT: at.staging.cloud.spryker.toys
+        SPRYKER_YVES_HOST_US: us.staging.cloud.spryker.toys
     php:
         enabled-extensions:
             - blackfire
