--- a/deploy.ci.yml
+++ b/deploy.ci.yml
@@ -53,6 +53,9 @@ image:
         SPRYKER_PRODUCT_CONFIGURATOR_PORT: 80
         SPRYKER_PRODUCT_CONFIGURATOR_ENCRYPTION_KEY: 'change123'
         SPRYKER_PRODUCT_CONFIGURATOR_HEX_INITIALIZATION_VECTOR: '0c1ffefeebdab4a3d839d0e52590c9a2'
+        SPRYKER_YVES_HOST_DE: de.night-test.cloud.spryker.toys
+        SPRYKER_YVES_HOST_AT: at.night-test.cloud.spryker.toys
+        SPRYKER_YVES_HOST_US: us.night-test.cloud.spryker.toys
     node:
         version: 16
         npm: 8
