--- a/deploy.korax-dev.yml
+++ b/deploy.korax-dev.yml
@@ -29,6 +29,8 @@ image:
         SPRYKER_HOOK_AFTER_DEPLOY: 'true'
         SPRYKER_HOOK_INSTALL: 'vendor/bin/install -r production --no-ansi -vvv'
         SPRYKER_HOOK_DESTRUCTIVE_INSTALL: 'vendor/bin/install -r destructive --no-ansi -vvv'
+        SPRYKER_YVES_HOST_DE: www.de.korax-dev.cloud.spryker.toys
+        SPRYKER_YVES_HOST_AT: www.at.korax-dev.cloud.spryker.toys
     php:
         enabled-extensions:
             - blackfire
