--- a/deploy.spryker-sns.yml
+++ b/deploy.spryker-sns.yml
@@ -52,6 +52,9 @@ image:
         SPRYKER_PRODUCT_CONFIGURATOR_PORT: 80
         SPRYKER_PRODUCT_CONFIGURATOR_ENCRYPTION_KEY: 'change123'
         SPRYKER_PRODUCT_CONFIGURATOR_HEX_INITIALIZATION_VECTOR: '0c1ffefeebdab4a3d839d0e52590c9a2'
+        SPRYKER_YVES_HOST_DE: de.suite-nonsplit.demo-spryker.com
+        SPRYKER_YVES_HOST_AT: at.suite-nonsplit.demo-spryker.com
+        SPRYKER_YVES_HOST_US: us.suite-nonsplit.demo-spryker.com
     php:
         enabled-extensions:
             - blackfire
