--- a/composer.json
+++ b/composer.json
@@ -103,7 +103,9 @@
         "voku/anti-xss": "^4.1.20",
         "webmozart/glob": "^4.0.0",
         "willdurand/negotiation": "^3.0.0",
-        "laminas/laminas-barcode": "^2.9.0"
+        "laminas/laminas-barcode": "^2.9.0",
+        "minishlink/web-push": "~v8.0.0",
+        "web-token/jwt-util-ecc": "^2.1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "9.5.27",
