--- a/deploy.valerii-terraform.yml
+++ b/deploy.valerii-terraform.yml
@@ -104,6 +104,19 @@ groups:
     EU:
         region: EU
         applications:
+            Redirects:
+                application: static
+                endpoints:
+                    valerii-terraform.cloud.spryker.toys:
+                        store: DE
+                        redirect:
+                            type: 302
+                            url: www.de.valerii-terraform.cloud.spryker.toys
+                    www.valerii-terraform.cloud.spryker.toys:
+                        store: DE
+                        redirect:
+                            type: 302
+                            url: www.de.valerii-terraform.cloud.spryker.toys
             Yves:
                 application: yves
                 endpoints:
