Hotfix/fix spryk version (#7648)
hotfix/fix-spryk-version

--- a/tests/PyzTest/Yves/Application/codeception.yml
+++ b/tests/PyzTest/Yves/Application/codeception.yml
@@ -30,6 +30,6 @@ suites:
                 - \SprykerTest\Shared\Testify\Helper\ConfigHelper
                 - \SprykerTest\Shared\Testify\Helper\LocatorHelper:
                       projectNamespaces: ['Pyz']
-                      coreNamespaces: ['Spryker', 'SprykerShop', 'SprykerEco', 'SprykerSdk']
+                      coreNamespaces: ['SprykerShop', 'Spryker', 'SprykerEco', 'SprykerSdk']
                 - \SprykerTest\Shared\Testify\Helper\DependencyHelper
                 - \SprykerTest\Shared\Propel\Helper\TransactionHelper
