--- a/deploy.ci.functional.mariadb.prefer-lowest.yml
+++ b/deploy.ci.functional.mariadb.prefer-lowest.yml
@@ -4,21 +4,19 @@ namespace: spryker_ci
 tag: '1.0'
 
 environment: docker.ci
-pipeline: docker.ci.acceptance
+pipeline: docker.ci.functional
 image:
     tag: spryker/php:8.1
     environment:
         SPRYKER_PRODUCT_CONFIGURATOR_HOST: date-time-configurator-example.spryker.local
         SPRYKER_PRODUCT_CONFIGURATOR_PORT: 80
-        SPRYKER_CONFIGURATOR_ENCRYPTION_KEY: 'change123'
+        SPRYKER_PRODUCT_CONFIGURATOR_ENCRYPTION_KEY: 'change123'
+        SPRYKER_PRODUCT_CONFIGURATOR_HEX_INITIALIZATION_VECTOR: '0c1ffefeebdab4a3d839d0e52590c9a2'
         SPRYKER_PUSH_NOTIFICATION_WEB_PUSH_PHP_VAPID_PUBLIC_KEY: 'BGqNWbv0hWM5CQ1-KwAfSQBMC6TMVFyrnh3vQp37oGCNvQ6eG_HyMjxBFJRWeCPTbzDoxcjhxLJS8Ck8r1G2oFw'
         SPRYKER_PUSH_NOTIFICATION_WEB_PUSH_PHP_VAPID_PRIVATE_KEY: 'UK6DywwjKITPpRHBSY9TLPIXm6BPrHX40sseIoXT9c8'
         SPRYKER_PUSH_NOTIFICATION_WEB_PUSH_PHP_VAPID_SUBJECT: 'https://spryker.com'
         SPRYKER_YVES_HOST_DE: yves.de.spryker.local
         SPRYKER_YVES_HOST_AT: yves.at.spryker.local
-    node:
-        version: 16
-        npm: 8
 
 composer:
     mode: "--no-dev --quiet"
@@ -88,6 +86,7 @@ groups:
                 endpoints:
                     backoffice.de.spryker.local:
                         store: DE
+                        primal: true
                         services:
                             session:
                                 namespace: 3
@@ -132,13 +131,10 @@ groups:
 services:
     database:
         engine: mysql
-        version: mariadb-10.3
+        version: mariadb-10.4
         root:
             username: 'root'
             password: 'secret'
-        endpoints:
-            localhost:3306:
-                protocol: tcp
     broker:
         engine: rabbitmq
         version: '3.9'
@@ -151,7 +147,7 @@ services:
         engine: redis
     search:
         engine: elastic
-        version: '7.10'
+        version: '6.8'
     scheduler:
         engine: jenkins
         version: '2.324'
