--- a/angular.json
+++ b/angular.json
@@ -108,6 +108,9 @@
         }
     },
     "cli": {
-        "analytics": false
+        "analytics": false,
+        "cache": {
+            "enabled": false
+        }
     }
 }
