CC-21271 updated suite/frontend/merchant-portal/tsconfig.spec.json

--- a/frontend/merchant-portal/tsconfig.spec.json
+++ b/frontend/merchant-portal/tsconfig.spec.json
@@ -7,7 +7,9 @@
     },
     "files": ["test-setup.ts"],
     "include": [
-        "../../vendor/spryker/*/src/Spryker/Zed/*/Presentation/Components/**/*.spec.ts",
-        "../../vendor/spryker/*/src/Spryker/Zed/*/Presentation/Components/**/*.d.ts"
+        "../../src/Pyz/Zed/*/Presentation/Components/**/*.spec.ts",
+        "../../src/Pyz/Zed/*/Presentation/Components/**/*.test.ts",
+        "../../src/Pyz/Zed/*/Presentation/Components/**/*.d.ts",
+        "jest.config.ts"
     ]
 }
