--- a/frontend/merchant-portal/tsconfig.spec.json
+++ b/frontend/merchant-portal/tsconfig.spec.json
@@ -8,9 +8,9 @@
     },
     "files": ["test-setup.ts"],
     "include": [
-        "../../src/Pyz/Zed/Presentation/Components/**/*.spec.ts",
-        "../../src/Pyz/Zed/Presentation/Components/**/*.test.ts",
-        "../../src/Pyz/Zed/Presentation/Components/**/*.d.ts",
+        "../../src/Pyz/Zed/*/Presentation/Components/**/*.spec.ts",
+        "../../src/Pyz/Zed/*/Presentation/Components/**/*.test.ts",
+        "../../src/Pyz/Zed/*/Presentation/Components/**/*.d.ts",
         "jest.config.ts"
     ]
 }
