--- a/deploy.ci.acceptance.yml
+++ b/deploy.ci.acceptance.yml
@@ -21,7 +21,7 @@ image:
         npm: 8
 
 composer:
-    mode: "--no-dev --quiet"
+    mode: '--no-dev --quiet'
     autoload: --classmap-authoritative
 
 regions:
