CC-25963: fix CI FE commands

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -124,13 +124,13 @@ jobs:
               run: speccy lint src/Generated/Glue/Specification/spryker_rest_api.schema.yml --rules=default
 
             - name: Style lint
-              run: node ./frontend/libs/stylelint
+              run: npm run yves:stylelint
 
-            - name: TS lint
-              run: node ./frontend/libs/tslint --format stylish
+            - name: ES lint
+              run: npm run yves:eslint
 
             - name: Front-end Formatter
-              run: node ./frontend/libs/formatter
+              run: npm run formatter
 
             - name: Front-end MP Lint
               run: npm run mp:eslint
