--- a/tests/PyzTest/Zed/Calculation/codeception.yml
+++ b/tests/PyzTest/Zed/Calculation/codeception.yml
@@ -35,3 +35,5 @@ suites:
                 - \SprykerTest\Shared\Stock\Helper\StockDataHelper
                 - \SprykerTest\Shared\Customer\Helper\CustomerDataHelper
                 - \SprykerTest\Zed\CustomerGroup\Helper\CustomerGroupHelper
+                - \SprykerTest\Zed\Category\Helper\CategoryDataHelper
+                - \SprykerTest\Zed\ProductCategory\Helper\ProductCategoryDataHelper
