--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
         "yves:help": "node ./frontend/libs/command-line-parser --help",
         "yves:stylelint": "node ./frontend/libs/stylelint",
         "yves:stylelint:fix": "node ./frontend/libs/stylelint --fix",
-        "yves:eslint": "eslint --no-error-on-unmatched-pattern ./src/Pyz/Yves/**/Theme/**/*.{js,ts}",
-        "yves:eslint:fix": "eslint --no-error-on-unmatched-pattern --fix ./src/Pyz/Yves/**/Theme/**/*.{js,ts}",
+        "yves:lint": "eslint --no-error-on-unmatched-pattern ./src/Pyz/Yves/**/Theme/**/*.{js,ts}",
+        "yves:lint:fix": "eslint --no-error-on-unmatched-pattern --fix ./src/Pyz/Yves/**/Theme/**/*.{js,ts}",
         "formatter": "node ./frontend/libs/formatter",
         "formatter:fix": "node ./frontend/libs/formatter --fix",
         "zed": "node ./node_modules/@spryker/oryx-for-zed/build",
@@ -29,7 +29,7 @@
         "mp:build:watch": "ng build --watch",
         "mp:build:production": "ng build --configuration production",
         "mp:stylelint": "node ./frontend/merchant-portal/stylelint",
-        "mp:eslint": "ng lint",
+        "mp:lint": "ng lint",
         "mp:test": "ng test",
         "mp:clean": "run-s mp:clean:*",
         "mp:clean:dist": "rimraf public/MerchantPortal/assets/js",
